--- a/.gitignore
+++ b/.gitignore
@@ -95,8 +95,8 @@ venv.bak/
 .spyproject
 
 # Sublime project settings
-.sublime-workspace
-.sublime-project
+epycom.sublime-workspace
+epycom.sublime-project
 
 # Rope project settings
 .ropeproject
