--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,13 +6,12 @@ stages:
 
 before_script:
   - pip install wheel
-  - python setup.py install
 
 test_job:
   stage: test
   script:
     - pip install pytest
-    - pytest
+    - python setup.py test
 
 deploy_job:
   stage: deploy
