--- a/.gitignore
+++ b/.gitignore
@@ -107,12 +107,10 @@ epycom.sublime-project
 # mypy
 .mypy_cache/
 
-# personal resources
-.recources/
-
 # pytest stuff
 .pytest_cache
 
-# epycom specific
-iconic_set/
-doc/
+# sphinx
+_build
+_static
+_templates
