--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,5 +18,6 @@ deploy_job:
   only:
     - tags
   script:
+    - python setup.py install
     - pip install twine
     - python -m twine upload -u cimba -p $TWINE_PASSWORD dist/*.whl
