--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ deploy_job:
   only:
     - tags
   script:
-    - python setup.py install
+    - pip install wheel
+    - python setup.py bdist_wheel
     - pip install twine
     - python -m twine upload -u cimba -p $TWINE_PASSWORD dist/*.whl
