--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ before_script:
 test_job:
   stage: test
   script:
-    - pip install pytest
+    - pip install pytest pytest-benchmark
     - python setup.py test
 
 deploy_job:
